          For a more accurate accounting, never switch your HP printers
          off.
          
        - A bug was fixed when edpykota --add was used with users who already
          had a quota on the specified printer.
          
        - A small display bug in repykota was introduced in preliminary 
          1.03 versions, and fixed later on.
        
    - 1.02 :
    
        - The installation script now checks for software availability
          and in case a software is missing asks the user if he
          wants to continue with the installation or abort it.
          
        - The configuration file pykota.conf is now expected to be 
          found in /etc instead of in /etc/cups
          The installation script prompts the user to see if he
          wants to move an old configuration file to the new location
          if needed.
          
        - Improved documentation.
        
        - You can now set the tcp/ip port on which the Quota Storage
          Server is listening, see sample configuration file for details.
        
        - Better general error handling.
        
        - Upgrade script for pre 1.01 PostgreSQL database schema is now
          included as well.
        
    - 1.01 :
    
        - The configuration file now accepts an option   
          to choose the recipient(s) of the email messages :
          
            - DevNull means no one will receive them.
            - User means only the user will receive them.
            - Admin means only the admin will receive them.
            - Both means the User and the Admin will receive them.
            
        - The configuration file now uses hard-coded default values
          when an option is not set. See sample configuration file
          for details.
          
        - Manual pages are included since 1.00, but I forgot to    
          add this information to this file.
          
        - Redistribution terms for the official package have  