@@ -22,6 +22,11 @@
 # $Id$
 #
 # $Log$
+# Revision 1.23  2003/04/15 11:30:57  jalet
+# More work done on money print charging.
+# Minor bugs corrected.
+# All tools now access to the storage as priviledged users, repykota excepted.
+#
 # Revision 1.22  2003/04/15 11:09:04  jalet
 # Small bug was fixed when a printer was never used and its internal
 # page counter is not accessible.
@@ -110,7 +115,7 @@ from pykota.requester import openRequester, PyKotaRequesterError
 class PyKotaFilter(PyKotaTool) :    
     """Class for the PyKota filter."""
     def __init__(self, username) :
-        PyKotaTool.__init__(self, isfilter=1)
+        PyKotaTool.__init__(self)
         self.username = username
         self.requester = openRequester(self.config, self.printername)
         self.printerhostname = self.getPrinterHostname()
